--- a/timer.html
+++ b/timer.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <script src="audio.js"></script>
+      <script src="AudioObj.js"></script>
       <script src="timer.js"></script>
       <template id="templateTimerCard">
          <style>
