Transition complete, working on nwer features enabled by having a single element

--- a/timer.html
+++ b/timer.html
@@ -144,7 +144,7 @@
 
    </head>
    <body>
-      <x-timerBody>
+      <x-timerBody id="timers">
       </x-timerBody>
       <script src="main.js"></script>
    </body>
