Improved UI for custom elements Enter key is accepted in input area to terminate input Exposed XTimerInputCard's test method in XTimerBody

--- a/timer.html
+++ b/timer.html
@@ -2,7 +2,7 @@
    <head>
       <script src="AudioObj.js"></script>
       <script src="timer.js"></script>
-      
+
       <template id="templateTimerCard">
          <style>
          #card{
@@ -19,6 +19,9 @@
             font-size: 1.2em;
             font-family: monospace;
             padding: 1px;
+         }
+         button.action {
+            font-size: 1em;
          }
          </style>
          <div id="card">
@@ -48,15 +51,18 @@
                font-size: 1em;
             }
             input.numInput {
-               width: calc(2ex + 20px);
+               width: calc(2ex + 35px);
                min-width: 2ex;
-               max-width: calc(2ex + 30px);
+               min-height: 32px;
             }
             div.component {
                margin-top: 10px;
             }
-            #timerInput {
+               #timerInput {
                font-family: monospace;
+            }
+            button.action {
+               font-size: 1em;
             }
          </style>
          <div id="card">
@@ -73,11 +79,11 @@
                <input type="number" class="numInput" id="In3">
                <span>sec</span>
 
-               <button id="confirmTime">Start</button>
+               <button id="confirmTime" class="action">Start</button>
             </div>
             <div id="alarmInput" class="component">
                <input type="time" class="time" step ="60">
-               <button id="confirmAlarm">Set</button>
+               <button id="confirmAlarm" class="action">Set</button>
             </div>
 
          </div>
@@ -112,29 +118,41 @@
             float: right;
             margin-right: 20px;
          }
+         button.action {
+            font-size: 1em;
+         }
+         button.decision {
+            min-width: calc(8ex + 10px);
+            margin-right: 10px;
+            float: right;
+         }
+         div.notificationHolder {
+            margin-bottom:1ex;
+            min-height: 1.5em;
+         }
          </style>
          <div id="card">
             <h3>
                <span id="title">
                   "Insert Title Here"
                </span>
-               <button id="Dismiss">Dismiss All</button>
+               <button id="Dismiss" class="action">Dismiss All</button>
             </h3>
 
          </div>
       </template>
       <template id="templateTimerNotificationSpan">
-         <div style="margin-bottom:5px;">
+         <div class="notificationHolder">
             <span class="time">Insert Time</span>
-            <button class="remove">Error</button>
-            <button class="repeat">Error</button>
+            <button class="remove action decision">Error</button>
+            <button class="repeat action decision">Error</button>
          </div>
       </template>
 
       <template id="templateTimerBody">
          <style>
          #pseudoBody {
-            min-width: 300px;
+            min-width: calc(20ex + 165px);
             padding-left: 15px;
             display: inline-block;
          }
